sample from springcloud actions